docs/api/qiskit/0.25/qiskit.opflow.evolutions.QDrift.mdx
---
title: QDrift (v0.25)
description: API reference for qiskit.opflow.evolutions.QDrift in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.QDrift
---

<span id="qiskit-opflow-evolutions-qdrift" />

# qiskit.opflow\.evolutions.QDrift

<Class id="qiskit.opflow.evolutions.QDrift" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/trotterizations/qdrift.py" signature="QDrift(reps=1)" modifiers="class">
  The QDrift Trotterization method, which selects each each term in the Trotterization randomly, with a probability proportional to its weight. Based on the work of Earl Campbell in [https://arxiv.org/abs/1811.08017](https://arxiv.org/abs/1811.08017).

  **Parameters**

  **reps** (`int`) – The number of times to repeat the Trotterization circuit.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.evolutions.QDrift.__init__" signature="__init__(reps=1)">
    **Parameters**

    **reps** (`int`) – The number of times to repeat the Trotterization circuit.
  </Function>

  ## Methods

  |                                                                                                             |                                                                                                                 |
  | ----------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.evolutions.QDrift.__init__ "qiskit.opflow.evolutions.QDrift.__init__")(\[reps]) | **type reps**`int`                                                                                              |
  | [`convert`](#qiskit.opflow.evolutions.QDrift.convert "qiskit.opflow.evolutions.QDrift.convert")(operator)   | Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`. |

  ## Attributes

  |                                                                                        |                                                                                               |
  | -------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
  | [`reps`](#qiskit.opflow.evolutions.QDrift.reps "qiskit.opflow.evolutions.QDrift.reps") | The number of repetitions to use in the Trotterization, improving the approximation accuracy. |

  ### convert

  <Function id="qiskit.opflow.evolutions.QDrift.convert" signature="convert(operator)">
    Convert a `SummedOp` into a `ComposedOp` or `CircuitOp` representing an approximation of e^-i\*\`\`op\_sum\`\`.

    **Parameters**

    **operator** (`OperatorBase`) – The `SummedOp` to evolve.

    **Return type**

    `OperatorBase`

    **Returns**

    The Operator approximating op\_sum’s evolution.

    **Raises**

    **TypeError** – A non-SummedOps Operator is passed into `convert`.
  </Function>

  ### reps

  <Attribute id="qiskit.opflow.evolutions.QDrift.reps">
    The number of repetitions to use in the Trotterization, improving the approximation accuracy.

    **Return type**

    `int`
  </Attribute>
</Class>

